--- a/GameCenter/GameCenter.csproj
+++ b/GameCenter/GameCenter.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Gamer.cs" />
     <Compile Include="IVerify.cs" />
     <Compile Include="Offer.cs" />
+    <Compile Include="Offerr.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs" />
